# neo4j-rs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPRECATION_CHANGELOG.md  PROGRESS.md  README.md
.deprecated/pr19_container_dto/: README.md  fingerprint.rs
.deprecated/pr19_container_dto/ladybug_module/: mod.rs  procedures.rs  spo.rs
crates/neo4j-chess/: Cargo.toml
crates/neo4j-chess/src/: lib.rs
docs/: AVX512_INTEGRATION_PLAN.md  CAM_CYPHER_REFERENCE.md  COMPATIBILITY_REPORT.md  DEPRECATED_INDEX.md  DEVELOPMENT.md  EDGE_VECTOR_BUNDLE.md  FEATURE_MATRIX.md  GUI_PLAN.md  INSPIRATION.md  INTEGRATION_PLAN_SCHEMA_CHANGES.md  INTEGRATION_ROADMAP.md  REALITY_CHECK.md  RESONANT_INTELLIGENCE.md  ROADMAP_REVIEW.md  SPOQ_AUDIT.md  STRATEGY_INTEGRATION_PLAN.md  THEORETICAL_FOUNDATIONS.md
extensions/quarto-ladybug/: _extension.yml  demo.qmd  ladybug-query.css  ladybug-query.js  quarto-ladybug.lua
src/: aiwar.rs  chess.rs  export.rs  lib.rs
src/cypher/: ast.rs  lexer.rs  mod.rs  parser.rs
src/execution/: mod.rs
src/index/: mod.rs
src/model/: awareness.rs  bf16_distance.rs  mod.rs  node.rs  path.rs  property_map.rs  relationship.rs  value.rs
src/planner/: mod.rs
src/storage/: cogrecord.rs  ladybug.rs  memory.rs  mod.rs
src/storage/ladybug/: mod.rs  procedures.rs
src/tx/: mod.rs
tests/: e2e_aggregation.rs  e2e_aiwar.rs  e2e_basic.rs  e2e_compound.rs  e2e_edge_cases.rs  e2e_export_roundtrip.rs  e2e_ladybug.rs  e2e_traversal.rs  e2e_write.rs
